Bug 1279202 - Make sure that deferring a resize of a document schedules a layout flush, not just a style one. r=dbaron